--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
         i18n = dojo.i18n.getLocalization("esriTemplate","template");
         var  defaults = {
         //The ID for the map from ArcGIS.com
-        webmap: "f5b13dbed07c46cdb783cf361833aa6b",
+        webmap: "6257ab0c03d44045b260768ab008e4bc",
         //Modify this to point to your sharing service URL if you are using the portal
-        sharingurl: "http://www.arcgis.com",//for example: "http://www.arcgis.com",
+        //sharingurl: "http://www.arcgis.com",//for example: "http://www.arcgis.com",
         //The id for the web mapping application item that contains configuration info - in most
         ////When editing you need to specify a proxyurl (see below) if the service is on a different domain
         //Specify a proxy url if you will be editing, using the elevation profile or have secure services or web maps that are not shared with everyone.
-        proxyurl: "",
+        proxyurl: "http://wit457.govt.hcg.local/proxyagol/proxy.ashx",
         //cases this will be null.
         appid: "",
         //set to true to display the title
